# protoshine

./: .gitignore  Cargo.toml  README.md  alpha.md
.github/workflows/: compiles.yml
modules/: README.md
modules/balances/: Cargo.toml
modules/collateral/: Cargo.toml  README.md
modules/collateral/src/: lib.rs
modules/meta/: Cargo.toml  README.md
modules/meta/src/: lib.rs  versioning.rs
modules/moloch/src/: lib.rs  util.rs
modules/moloch/src/origins/: recipients.rs
modules/mvd/: Cargo.toml  README.md
modules/mvd/src/: lib.rs  util.rs
modules/mvd/src/origins/: mod.rs  recipients.rs
modules/protoshine/: Cargo.toml  README.md
modules/protoshine/src/: bank.rs  collateral.rs  lib.rs  mock.rs  tests.rs  vote.rs
modules/signal/: Cargo.toml  README.md
modules/signal/src/: lib.rs
modules/util/: Cargo.toml
modules/util/src/: lib.rs
src/: lib.rs  util.rs
src/origins/: meta.rs  mod.rs
