[package]
name = "collateral"
version = "2.0.0"
authors = ["4meta5"]
edition = "2018"

[dependencies]
serde = { version = "1.0.104", optional = true }
codec = { package = "parity-scale-codec", version = "1.1.2", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
signal = {path = "../signal"}

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
